--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,9 +1,9 @@
-- title: Student, University of Central Florida, BS
+- title: IT, University of Central Florida, BS
   from: 1999
   to: 2002
   description: Cumulative GPA 3.5, Major GPA 3.6<br>International Honor Society for the Computing and Information Disciplines, Upsilon Pi 	
 
-- title: Student, Rollins College, MBA
+- title: Business Administration, Rollins College, MBA
   from: 2007
   to: 2009
   description: GPA 3.9<br>Beta Gamma Sigma, International Honor Society for Business Administration<br>Graduated with Honors<br>Professional Leadership Award
